--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <header>
   <h1>Closet Cleanup</h1>
   <nav>
-    <a routerLink="/" style="cursor: pointer;">Home</a> |
-    <a routerLink="/dashboard" style="cursor: pointer;">Dashboard</a> |
-    <a routerLink="/outfit-planner" style="cursor: pointer;">Outfit Planner</a> |
-    <a routerLink="/public-outfits" style="cursor: pointer;">Public Outfits</a> |
-    <a routerLink="/upload-clothing" style="cursor: pointer;">Upload Clothing</a> |
-    <a routerLink="/admin" style="cursor: pointer;">Admin</a> |
-    <a routerLink="/login" style="cursor: pointer;">Login</a> |
-    <a routerLink="/signup" style="cursor: pointer;">Sign Up</a>
+    <a routerLink="/" href="#">Home</a> |
+    <a routerLink="/dashboard" href="#">Dashboard</a> |
+    <a routerLink="/outfit-planner" href="#">Outfit Planner</a> |
+    <a routerLink="/public-outfits" href="#">Public Outfits</a> |
+    <a routerLink="/upload-clothing" href="#">Upload Clothing</a> |
+    <a routerLink="/admin" href="#">Admin</a> |
+    <a routerLink="/login" href="#">Login</a> |
+    <a routerLink="/signup" href="#">Sign Up</a>
   </nav>
 </header>
 
