--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,15 @@
 <header>
   <h1>Closet Cleanup</h1>
   <nav>
-    <a routerLink="/" href="#">Home</a> |
-    <a routerLink="/dashboard" href="#">Dashboard</a> |
-    <a routerLink="/outfit-planner" href="#">Outfit Planner</a> |
-    <a routerLink="/public-outfits" href="#">Public Outfits</a> |
-    <a routerLink="/upload-clothing" href="#">Upload Clothing</a> |
-    <a routerLink="/admin" href="#">Admin</a> |
-    <a routerLink="/login" href="#">Login</a> |
-    <a routerLink="/signup" href="#">Sign Up</a>
+    <a routerLink="/">Home</a> |
+<a routerLink="/dashboard">Dashboard</a> |
+<a routerLink="/outfit-planner">Outfit Planner</a> |
+<a routerLink="/public-outfits">Public Outfits</a> |
+<a routerLink="/upload-clothing">Upload Clothing</a> |
+<a routerLink="/admin">Admin</a> |
+<a routerLink="/login">Login</a> |
+<a routerLink="/signup">Sign Up</a>
+
   </nav>
 </header>
 
